Fix small repositioning ofcollapsable buttons

--- a/src/scss/pages/_generator.scss
+++ b/src/scss/pages/_generator.scss
@@ -9,7 +9,7 @@
     grid-gap: 30px;
   }
   &__customize {
-    padding: 0px 20px 0px 20px;
+    padding: 27px 20px 0px 20px;
   }
   &__container {
     background-image: linear-gradient(to bottom, #bfcdd0, #dde9ed);
@@ -140,9 +140,7 @@
 .customize-design__container {
   display: flex;
   flex-direction: row;
-  margin-top: 30px;
   position: relative;
-
   &-title {
     font-family: $fontFamily-text;
     text-transform: uppercase;
@@ -173,23 +171,20 @@
     width: 326.5px;
   }
   &-design {
-    margin-bottom: 7px;
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid $color-border;
     padding-bottom: 10px;
     @include tablet {
-      padding-bottom: 30px;
-      margin-bottom: 30px;
+      padding-bottom: 7px;
     }
   }
   &-menu {
-    margin-bottom: 7px;
     border-bottom: 1px solid $color-border;
-    padding-bottom: 10px;
+    padding: 7px 0px 10px 0px;
     @include tablet {
-      padding-bottom: 30px;
-      margin-bottom: 30px;
+      padding: 10px 0px 7px 0px;
+      margin: 0px 0px 0px 0px;
     }
   }
 }
@@ -198,7 +193,7 @@
   margin-top: 22px;
   margin-bottom: 30px;
   @include tablet {
-    margin-bottom: 0px;
+    margin-bottom: 23px;
   }
   &-title {
     text-transform: uppercase;
@@ -430,18 +425,14 @@
 .gen-main__customize-share {
   display: flex;
   flex-direction: column;
-  margin: 10px 0px 30px 0px;
-  @include tablet {
-    margin: 10px 0px 30px 0px;
-  }
+  padding: 10px 0px 7px 0px;
+  border-bottom: 1px solid #d8d8d8;
   &--hidden {
     padding: 20px 0px 30px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid #d8d8d8;
-    border-right: none;
-    border-left: none;
+    border-bottom: 1px solid #d8d8d8;
   }
 }
 .customize-share__container {
@@ -453,9 +444,6 @@
     font-size: 18px;
     margin-left: 12px;
     color: $fontColor-tertiary;
-    @include tablet {
-      margin-bottom: 5px;
-    }
   }
   &-logo {
     width: 21px;
@@ -481,7 +469,7 @@
   font-size: 18px;
   text-transform: uppercase;
   text-decoration: none;
-  margin-top: 30px;
+  margin: 30px 0px 30px 0px;
   padding: 13px 18px 13px 48px;
   align-self: center;
   background-color: $color-tertiary;
@@ -489,7 +477,6 @@
   background-repeat: no-repeat;
   background-size: 25px;
   background-position: 17px 14px;
-
   @include tablet {
     align-self: center;
   }
@@ -564,6 +551,7 @@
   position: absolute;
   right: 0px;
   outline: none;
+  margin: 3px 0px 6px 0px;
   @include tablet {
     background-color: $color-primary;
   }
